--- a/index.html
+++ b/index.html
@@ -121,6 +121,14 @@
             </div>
           </div>
         </div>
+
+        <div class="card" style="width: 18rem;">
+          <img src="Tik-Tac-Toe.jpg" class="card-img-top" width="18rem" >
+          <div class="card-body">
+            <h1 id="1" class="card-title">Tik-Tac-Toe</h1>
+            <a href="https://alby0n.github.io/TicTacToe/" class="btn btn-primary">Click to play</a>
+          </div>
+        </div>
        
      </body>
      
