--- a/index.html
+++ b/index.html
@@ -122,14 +122,28 @@
           </div>
         </div>
 
-        <div class="card" style="width: 18rem;">
-          <img src="Tik-Tac-Toe.jpg" class="card-img-top" width="18rem" >
+    <div class="row">
+      <div class="col-sm-6 mb-3 mb-sm-0">
+        <div class="card">
           <div class="card-body">
-            <h1 id="1" class="card-title">Tik-Tac-Toe</h1>
+            <img src="Tik-Tac-Toe.jpg" class="card-img-top" width="18rem" >
+            <h1  class="card-title">Tik-Tac-Toe</h1>
             <a href="https://alby0n.github.io/TicTacToe/" class="btn btn-primary">Click to play</a>
           </div>
         </div>
-       
+      </div>
+      <div class="col-sm-6">
+        <div class="card">
+          <div class="card-body">
+            <img src="easy wordle.png" class="card-img-top" width="17rem" >
+            <div class="card-body">
+              <h1  class="card-title">Easy Wordle</h1>
+              <a href="https://alby0n.github.io/Easy-Wordle/" class="btn btn-primary">Click to play</a>
+          </div>
+        </div>
+      </div>
+    </div>
+    </div>
      </body>
      
   
